plugins {
  id 'java'
  id "se.thinkcode.cucumber-runner" version "0.0.11"
}

group = 'com.silenteight.iris.tests'

java {
  toolchain {
    languageVersion = JavaLanguageVersion.of(17)
  }
}

repositories {
  mavenCentral()
}

dependencies {
  testImplementation group: 'com.aventstack', name: 'extentreports', version: '5.0.9'
  testImplementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind',
      version: '2.13.2.2'
  testImplementation group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-csv',
      version: '2.13.2'
  testImplementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'
  testImplementation group: 'io.cucumber', name: 'cucumber-jvm-deps', version: '1.0.6'
  testImplementation group: 'io.cucumber', name: 'cucumber-junit', version: '7.3.4'
  testImplementation group: 'io.rest-assured', name: 'rest-assured', version: '5.0.1'
  testImplementation group: 'io.cucumber', name: 'cucumber-java', version: '7.3.4'
  testImplementation group: 'junit', name: 'junit', version: '4.13.2'
  testImplementation group: 'org.awaitility', name: 'awaitility', version: '4.2.0'
  testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
  testImplementation 'org.hamcrest:hamcrest-all:1.3'

  testCompileOnly 'org.projectlombok:lombok:1.18.22'
  testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
}

sourceSets {
  test {
    resources {
      srcDir file('src/test/java')
      exclude '**/*.java'
    }
  }
}

test {
  useJUnitPlatform()
  reports.junitXml.setEnabled(false)
  systemProperties(System.getProperties())
  outputs.upToDateWhen { false }
}
